WAVE: ability to select a different CRS for the map (TODO: background layer) WAVE: fixed layout problems in sidebar buttons

--- a/htdocs/src/ui_map.css
+++ b/htdocs/src/ui_map.css
@@ -48,15 +48,14 @@
 	margin: 5px;
 	padding-left: 5px;
 	padding-right: 5px;
-	height: 23px;
 	border: 1px solid rgb(230, 230, 230);
 	border-radius: 1px;
 	text-decoration: none;
 	text-align: center;
 	vertical-align: middle;
-	padding-top: 2px;
 	text-decoration: none;
-	height: 23px;
+	height: 25px;
+	line-height: 25px;
 }
 
 .layerselection a:first-child {
